# adv_mla_lab_1

./: Makefile  README.md  pyproject.toml  requirements.txt
ex1/: __init__.py  dataset.py  features.py  plots.py
ex1/modeling/: predict.py  train.py
models/: rf2.joblib
notebooks/: 1_baseline.ipynb  2_rf.ipynb
