[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "Siddharth Suresh Nair",email = "sidsuresh@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (==2.2.2)",
    "jupyterlab (==4.2.3)",
    "scikit-learn (==1.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.plugin"]
poetry-plugin-export = "poetry_plugin_export.plugin:ExportPlugin"